@@ -5,6 +5,8 @@ http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.11.1.7
   Update PCRE to version 7.8 (#2209911)
+  Show missing lines in location pane for diffs having both different
+    and missing lines (#2119235)
   Translation updates:
   - Brazilian (#2219568)
   - Czech (r6034)
